# astmaker

./: Cargo.toml  LICENSE.txt  README.md
.github/: FUNDING.yml
src/: lib.rs
src/codegen/: ast.rs  model.rs
src/parser/: ast.rs  model.rs
tests/: ast_test.rs  generic_test.rs  lifetime_test.rs
